--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,77 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.formArea{
+  display: block !important;
+  margin-left: 35%;
+  margin-top: 5%;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+ul li{
+  display: inline;
+  list-style-type: none;
+  padding-right: 20px;
+  /* float: left; */
+  text-align: left;
+}
+
+ul li img {
+  margin-top: 8%;
+  /* width: 120%; */
+}
+
+ul li h3, p {
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+}
+
+.searchForm{
+  margin-left: 5%;
+}
+
+.searchForm input {
+  margin-right: 1.2%;
+}
+
+.searchForm input[type=text], select {
+  padding: 1% 1.7%;
+  border: 1px solid #c9d1d9;
+  border-radius: 2px;
+  background-color: transparent;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  font-size: large;
+  color: #8b949e  ;
+}
+
+.searchForm input[type=text] {
+  width: 30%;
 }
